fixes link to ian's page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h2>Who?</h2>
             
             <p>Jason (<a href="https://peerj.com/about/#jason-hoyt" target="_blank">PeerJ</a>) 
-            asked Ian (<a href="https://peerj.com/about/#jason-hoyt" target="_blank">eLife</a>), and he said yes.</p>
+            asked Ian (<a href="http://www.elifesciences.org/about/elife-community/executive-staff/ian-mulvany-head-of-technology/" target="_blank">eLife</a>), and he said yes.</p>
             
             <!-- Start of How -->
             <h2>How?</h2>
