adding sponsor logos

--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
             <div class="sponsors">
                 <h3>Sponsors</h3>
             
-                <div><img src="images/peerJ_logo_transparent.png" width="100"> </div>
+                <div> <a href="https://peerj.com/"><img src="images/peerJ_logo_transparent.png" alt="PeerJ" width="100"></a></div>
             
-                <div><img src="images/elife_logo_tp.png" width="100"></div>
+                <div><a href="http://elife.elifesciences.org/"><img src="images/elife_logo_tp.png" alt="eLife" width="100"></a></div>
 
-                <div>PLOS</div>
+                <div><a href="http://aws.amazon.com/"><img src="images/AWS_Logo_Web_tp.png" alt="Amazon Web Services" width="100"></a></div>
 
-                <div><img src="images/AWS_Logo_Web_tp.png" width="100"></div>
+                <div><a href="http://www.plos.org/"><img src="images/PLOS-logo1-tp.png" alt="Public Library of Science" width="100"></a></div>
 
-                <div>Skills Matter</div>
+                <div><a href="http://skillsmatter.com/"><img src="images/skills-matter_tp.png" alt="Skills Matter" width="100"></a></div>
 
             </div>
 
