--- a/index.html
+++ b/index.html
@@ -97,10 +97,7 @@
         <aside id="sidebar">
 
             <!-- Start of Registration -->
-            <div class="well well-lime">
-                <div class="header">Registration</div>
-                <p>We'll announce registration shortly.</p>
-            </div>
+<div style="width:195px; text-align:center;" ><iframe  src="http://www.eventbrite.co.uk/countdown-widget?eid=6672211765" frameborder="0" height="436" width="195" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:195px; text-align:center;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.co.uk/r/ecount">Sell Tickets</a> <span style="color:#ddd;">through</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.co.uk?ref=ecount">Eventbrite</a></div></div>
             
             <div class="sponsors">
                 <h3><a href="sponsors.html">Sponsors</a></h3>
