added link to cc licence

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>We have two goals  </p>
             
             <ul>
-            <li>Demonstrate the value of the CC-BY licence within academia. We are interested in supporting innovations around and on top of the literature.</li>
+            <li>Demonstrate the value of the <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY licence</a> within academia. We are interested in supporting innovations around and on top of the literature.</li>
             <li>Reach out to academics who are keen to learn or improve their programming skills to better their research. We’re especially interested in academics who have never coded before.</li>
             </ul>
             
