added more description about CCby

--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
             <li>Reach out to academics who are keen to learn or improve their programming skills to better their research. We’re especially interested in academics who have never coded before.</li>
             </ul>
             
+            <h3>What do you mean by focussing on <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY licence</a> within academia?</h3>
+
+            <p>The CC-BY licence is the creative commons licence that allows for downstream remixing of the original work, so long at the original author is credited. It puts no other restrictions on what you can do with that work. The recent Research Councils UK <a href="http://www.rcuk.ac.uk/research/Pages/outputs.aspx">Policy on Open Access</a> prefers all new work that they fund to be published under this licence.</p>
+
+            <p>The hope is that by having access to remix and reinvent the scholarly literature we can create better tools on top of that literature. This hackday will explore ideas around what one can do with this kind of material.</p>
+
+            <<h3>OK, what should I build?</h3>
+            <p>We are just starting to gather ideas now, but how about a tool to help unlock all of the great material in institutional repositories? How about a tool to reimagine what a journal article looks like? What about a tool to help gather real time metrics on topics of interest? What about a tool to data mine all of the CC-BY literature for trends? What about a tool to help identify whether a paper is CC-BY in the first place? There are many many exciting ideas, and we want to hear yours!</p>
+
             <!-- Start of When -->
             <h2>When?</h2>
             
