--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
             <p>The hope is that by having access to remix and reinvent the scholarly literature we can create better tools on top of that literature. This hackday will explore ideas around what one can do with this kind of material.</p>
 
-            <<h3>OK, what should I build?</h3>
-            <p>We are just starting to gather ideas now, but how about a tool to help unlock all of the great material in institutional repositories? How about a tool to reimagine what a journal article looks like? What about a tool to help gather real time metrics on topics of interest? What about a tool to data mine all of the CC-BY literature for trends? What about a tool to help identify whether a paper is CC-BY in the first place? There are many many exciting ideas, and we want to hear yours!</p>
+            <h3>OK, what should I build?</h3>
+            <p>We are just starting to gather ideas now, but how about a tool to help unlock all of the great material in institutional repositories? How about a tool to re-imagine what a journal article looks like? What about a tool to help gather real time metrics on topics of interest? What about a tool to data mine all of the CC-BY literature for trends? What about a tool to help identify whether a paper is CC-BY in the first place? There are many many exciting ideas, and we want to hear yours!</p>
 
             <!-- Start of When -->
             <h2>When?</h2>
