Fix minor typo.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
             <h3>What do you mean by focussing on <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY licence</a> within academia?</h3>
 
-            <p>The CC-BY licence is the creative commons licence that allows for downstream remixing of the original work, so long at the original author is credited. It puts no other restrictions on what you can do with that work. The recent Research Councils UK <a href="http://www.rcuk.ac.uk/research/Pages/outputs.aspx">Policy on Open Access</a> prefers all new work that they fund to be published under this licence.</p>
+            <p>The CC-BY licence is the Creative Commons licence that allows for downstream remixing of the original work, so long as the original author is credited. It puts no other restrictions on what you can do with that work. The recent Research Councils UK <a href="http://www.rcuk.ac.uk/research/Pages/outputs.aspx">Policy on Open Access</a> prefers all new work that they fund to be published under this licence.</p>
 
             <p>The hope is that by having access to remix and reinvent the scholarly literature we can create better tools on top of that literature. This hackday will explore ideas around what one can do with this kind of material.</p>
 
