added info about BMJ hackday

--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
                 <li><a href="https://github.com/hack4ac/hack4ac.github.io" target="_blank">Code repository</a> - yes we want you to hack this site!</li>
             </ol>
 
+            <h2>What else is happening that weekend?</h2>
+            
+            <p>Like the number 12 bus, you wait for ages, and then a bunch of them turn up at the same time. It turns out that on the same weekend there is going to ba another <a href="http://rewiredstate.org/hacks/bmj">awesome hacking event</a> hosted by the <a href="http://www.bmj.com/">BMJ</a>.</p>
+
+            <p>We didn't know about each other's events until we started tweeting about them, and but it looks like there is going to be a good opportunity for both hackdays to work well together. We are going to focus hack4ac on the journal and content side, and the BMJ hack day is going to focus on medical data and hacks that could help with front line patient support. </p>            
+
+            <p>We are going to coordinate on the weekend of the event, and in the run-up to see if we can cross-fertilise ideas. We will be announcing a pub event in the run-up to the weekend, stay posted!</p>
+
+
         </section>
 
         <aside id="sidebar">
