site chagnes to add digital science

--- a/sponsors.html
+++ b/sponsors.html
@@ -66,6 +66,15 @@
 
             <p>Skills Matter is helping generously with the venue, they are really excited to be part of making this event happen!</p>
 
+
+
+
+            <h2><a href="http://www.digital-science.com//"><img src="images/ds_bg.png" alt="Digital Science" width="100"></a></h2>
+        
+            <p>Digital Science are working to make research more efficient through better use of technology. Their team consists of UX/UI designers, computational linguists, data scientists and other top developers specialising in Ruby, JavaScript, Java, Clojure and Python. They are the real deal, and we are really happy to have them on board as a sponsor of this event.</p>
+
+            <p>Digital Science is generously providing support for the event!</p>
+
         </section>
 
         <aside id="sidebar">
